# binderceptor

./: README.md  build.gradle  gradle.properties  mk.py  proguard-rules.pro  settings.gradle
app/: build.gradle  mk.sh
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: list_item_bg_single_selected.xml  list_item_bg_single_selector.xml  list_item_bg_single_unselected.xml
app/src/main/res/layout/: activity_console.xml  activity_main.xml  activity_sub.xml  activity_test.xml
cmpt-mts-binderceptor/: build.gradle  mk.sh  pom.json
cmpt-mts-binderceptor/src/main/: AndroidManifest.xml
doc/: LICENSE  sdk.md
files/: cmpt-testin.aar  cmpt-utils.aar  default.gradle  ifmSharedTest.keystore
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  mk.sh
jni/makeso/: mk.sh
jni/makeso/jni/: Android_debug.mk  Android_release.mk  Application_debug.mk  Application_release.mk
jni/native/: mk.sh
jni/native/jni/: Android.mk  Application.mk  CMakeLists.txt
jni/native/jni/inc/: binder_android_parcel.h  binder_def.h  binder_info.h  binder_jvm_parcel.h  binder_linux.h  binder_parcel.h  binder_parcel_pool.h  binderceptor_debug.h  binderceptor_native.h  cmn_env.h  cmn_errors.h  cmn_macro.h  cmn_mutex.h  cmn_utils.h
jni/native/jni/src/: binder_android_parcel.cpp  binder_info.cpp  binder_jvm_parcel.cpp  binder_parcel.cpp  binder_parcel_pool.cpp  binderceptor_debug.cpp  binderceptor_main.cpp  binderceptor_native.cpp  cmn_env.cpp  cmn_utils.cpp
pyutils/: arguments.py  utils_cmn.py  utils_file.py  utils_import.py  utils_logger.py
(+11 files in other folders)
